--- a/signup.css
+++ b/signup.css
@@ -24,14 +24,19 @@
 	font-family: Calibri;
 	cursor:pointer;
 	margin-top: 5px;
+	width: 100%;
+}
+
+.button2:hover {
+	background-color: #D46500;
 }
  
 .shiftarea {
 	background-color:#e8e7e7;
 	width: 600px;
 	height: 500px;
-	overflow: scroll;
-	
+	overflow-y: scroll;
+	overflow-x: hidden;
 }
 button:hover{
 	background-color:#D46527;
