--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,24 @@
 	background-color: #D46527;
 }
 
+#hdr {
+	height:10em;
+	background:url(/img/2017-header.png) #000 right no-repeat;
+	background-position: right;
+	background-size:cover;
+	background-color: #fff;
+}
+
+#social {
+	text-align: right;
+	padding-right: 0.5em;
+	padding-top: 0.4em;
+}
+
+a {
+	padding-left: 0.55em;
+}
+
 #Main {
 	margin: 1em 1em 1em 1em;
 	padding-top: 1em;
@@ -19,8 +37,31 @@
 	margin: 0 auto;
 }
 
+input {
+	text-align: center;
+}
+
 #signInStart {
-	margin-top: 5em;
+	margin-top: 2em;
+}
+
+#ftr {
+	margin-top:0.5em;
+	background-color: #09476C;
+	text-align: center;
+	font-size:15pt;
+	color:#fff;
+	padding:1em;
+}
+
+#ftr p {
+	font-size:15pt;
+	padding:0em 1em 0em 1em;
+	font-weight: normal;
+}
+
+#mob-social {
+	display: none;
 }
 
 @media (max-width:49em){
@@ -29,5 +70,23 @@
     }
 	#right{
 		display: none;
+	}
+	#hdr {
+		height: 5em;
+		background:url(/img/2017-header-mobile.png) #000 right no-repeat;
+		background-position: center;
+		background-size: auto;
+		background-color: #fff;
+	}
+	#social {
+		display: none;
+	}
+	#mob-social {
+		display: block;
+	}
+	#ftr p {
+		font-size:12pt;
+		padding:0em 1em 0em 1em;
+		font-weight: normal;
 	}
 }
