--- a/css/hdr_ftr.css
+++ b/css/hdr_ftr.css
@@ -1,6 +1,6 @@
 #hdr {
 	height:10em;
-	background:url(/img/2017-header.png) #000 right no-repeat;
+	background:url(/img/2017-header-2.png) #000 right no-repeat;
 	background-position: right;
 	background-size:cover;
 	background-color: #fff;
