--- a/css/main.css
+++ b/css/main.css
@@ -56,6 +56,22 @@ input {
 	margin-bottom: 1em;
 }
 
+#edit {
+	display:inline;
+}
+
+h3i{
+	font-size: 24px;
+	display:linline;
+}
+
+#mnu {
+	width: 100%;
+	background-color: #09476C;
+	margin-top:8px;
+	padding: 5px 5px 0 5px;
+}
+
 @media (max-width:49em){
     #left{
         display: none;
